[package]
name = "opentimestamps"
version = "0.1.2"
authors = ["Andrew Poelstra <rust-ots@wpsoftware.net>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/opentimestamps/rust-opentimestamps/"
repository = "https://github.com/opentimestamps/rust-opentimestamps/"
documentation = "https://docs.rs/opentimestamps/"
description = "Rust library for parsing, verifying and serializing OpenTimestamps timestamps"

keywords = [ "crypto", "bitcoin", "ots", "opentimestamps", "timestamping" ]

[lib]
name = "opentimestamps"
path = "src/lib.rs"

[[bin]]
name = "ots-info"
path = "src/bin/ots_info.rs"

[dependencies]
env_logger = "0.4"
log = "0.3"
rust-crypto = "0.2"

