[package]
name = "opentimestamps"
version = "0.2.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/opentimestamps/rust-opentimestamps/"
repository = "https://github.com/opentimestamps/rust-opentimestamps/"
documentation = "https://docs.rs/opentimestamps/"
description = "Rust library for parsing, verifying, and serializing OpenTimestamps timestamps"

keywords = [ "crypto", "bitcoin", "ots", "opentimestamps", "timestamping" ]

[lib]
name = "opentimestamps"
path = "src/lib.rs"

[[bin]]
name = "ots-info"
path = "src/bin/ots_info.rs"

[dependencies]
bitcoin_hashes = "0.12.0"
env_logger = "0.10"
log = "0.4"

